--- a/static/style.css
+++ b/static/style.css
@@ -57,6 +57,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  text-transform: uppercase;
   padding: 6px 8px;
   gap: 2px;
   background: #e6dede;
