--- a/themes/mc-server-theme-amp/layouts/partials/structure/head.html
+++ b/themes/mc-server-theme-amp/layouts/partials/structure/head.html
@@ -67,6 +67,7 @@ class="no-js"><!--<![endif]-->
     rel="stylesheet"
     href="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.css"
   />
+  <link rel="stylesheet" href="/style.css" />
   
   {{ end }}
   <meta
