--- a/themes/mc-server-theme-amp/layouts/_default/price.html
+++ b/themes/mc-server-theme-amp/layouts/_default/price.html
@@ -1,135 +1,82 @@
-<!DOCTYPE html>
-  <html {{ if isset $.Site.Params "amp" }}amp{{ end
-  }} lang="{{ with $.Site.LanguageCode }}{{ . }}{{ else }}en{{ end }}"
-  class="no-js"><!--<![endif]-->
-  <head>
-    <title>{{ .Title }}</title>
-    <meta name="description" content="{{ .Site.Params.description }}" />
-    <meta charset="utf-8" />
-  
-    {{ partial "amp/header" . }}
-  
-    <link rel="canonical" href="{{ .Permalink }}" />
-  
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-  
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-  
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1"
-    />
-    <link rel="stylesheet" href="/style.css" />
-  
-    {{ with .OutputFormats.Get "RSS" }}
-    <link
-      href="{{ .RelPermalink }}"
-      rel="alternate"
-      type="application/rss+xml"
-      title="{{ site.Title }}"
-    />
-    <link
-      href="{{ .RelPermalink }}"
-      rel="feed"
-      type="application/rss+xml"
-      title="{{ site.Title }}"
-    />
-    {{ end }}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  
-    <meta name="theme-color" content="{{ $.Site.Params.themeColor }}" />
-  
-    {{ partial "seo/main" . }} {{ if ( ne .Params.disableSnipcart true ) }}
-    <link rel="preconnect" href="https://app.snipcart.com" />
-    <link rel="preconnect" href="https://cdn.snipcart.com" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.css"
-    />
-    
-    {{ end }}
-    <meta
-      name="amp-script-src"
-      content="sha384-xmxQasq82hOaOb1lFvTFXNWfVhlQ7D6-HEnLxkwhl_4bZXOExdJELoe2WcNVm3u8"
-    />
-  </head>
-<body>
+{{ partial "structure/head" . }}
 
-  <!-- Price head -->
-  <section class="price-head">
-    <ul class="d-flex">
-      <li><img src="/images/price/image2.png" alt="Logo" class="img-fluid"></li>
-      <li><img src="/images/price/image3.png" alt="Logo" class="img-fluid"></li>
-    </ul>
-  </section>
-  <!--Card body-->
-  <section class="card-body py-5 ">
-      <div class="row justify-content-center">
-
-        <!--Card-->
-        {{ range .Params.product }}
-        <div class="col-md-4 margin5">
-          {{if .featured}}
-          <div class="banner"><div class="text">
-            <p>Recommended</p>
-          </div></div>
-          {{end}}
-          <div class="card">
-            <div class="card-top">
-              <div class="card-head">
-                <div class="col-md-4 "><P>{{.id}}</P></div>
-                <div class="col-md-4"><h6>{{.name}}</h6></div>
-                <div class="col-md-4 "><h5>{{.quota}}<span>{{.measure}}</span></h5></div>
-             
+<!-- Price head -->
+<section class="price-head">
+  <ul class="d-flex">
+    <li><img src="/images/price/image2.png" alt="Logo" class="img-fluid" /></li>
+    <li><img src="/images/price/image3.png" alt="Logo" class="img-fluid" /></li>
+  </ul>
+</section>
+<!--Card body-->
+<section class="card-body py-5">
+  <div class="row justify-content-center">
+    <!--Card-->
+    {{ range .Params.product }}
+    <div class="col-md-4 margin5">
+      {{if .featured}}
+      <div class="banner">
+        <div class="text">
+          <p>Recommended</p>
+        </div>
+      </div>
+      {{end}}
+      <div class="card">
+        <div class="card-top">
+          <div class="card-head">
+            <div class="col-md-4"><p>{{.id}}</p></div>
+            <div class="col-md-4"><h6>{{.name}}</h6></div>
+            <div class="col-md-4">
+              <h5>{{.quota}}<span>{{.measure}}</span></h5>
             </div>
-            <div class="card-img mb-1">
-              <img src="{{.image}}" class="img-fluid" alt="">
-            </div>
-            <div class="card-content">
-              {{range .content}}
-              <div class="content py-3">
-                <ul>
-                  <li>
-                    {{range .icons}}
-                    <img src="{{.}}" alt="icon">
-                    {{end}}
-                    <h4>{{.name}}</h4></li>
-                </ul>
-                <p>{{.content}}</p>
-              </div>
-              {{end}} 
-              
-            </div>
-            <div class="card-feature">
-              {{range .featuredItems}}
-              <div class="col-md-4">
-                <div class="feature">
-                  <h3>{{.name}}</h3>
-                  <img src="{{.icon}}" alt="">
-                </div>
-              </div>
-              {{end}}
-              <div class="col-md-4">
-                <div class="feature">
-                  <h3>Retreat Cost</h3>
-                  <h2>${{.price}}/<span>mo</span></h2>
-                </div>
-              </div>
-            </div>
-            </div>
-            <div class="card-bottom">
+          </div>
+          <div class="card-img mb-1">
+            <amp-img
+              class="cover"
+              src="{{.image}}"
+              layout="responsive"
+              width="500"
+              height="300"
+            >
+            </amp-img>
+          </div>
+          <div class="card-content">
+            {{range .content}}
+            <div class="content py-3">
               <ul>
-                {{ $currentPage := . }}
-                <li class="mb-3"><h6>Stats</h6>
-                  <button class="snipcart-add-item"
+                <li>
+                  {{range .icons}}
+                  <img src="{{.}}" alt="icon" />
+                  {{end}}
+                  <h4>{{.name}}</h4>
+                </li>
+              </ul>
+              <p>{{.content}}</p>
+            </div>
+            {{end}}
+          </div>
+          <div class="card-feature">
+            {{range .featuredItems}}
+            <div class="col-md-4">
+              <div class="feature">
+                <h3>{{.name}}</h3>
+                <img src="{{.icon}}" alt="" />
+              </div>
+            </div>
+            {{end}}
+            <div class="col-md-4">
+              <div class="feature">
+                <h3>Retreat Cost</h3>
+                <h2>${{.price}}/<span>mo</span></h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-bottom">
+          <ul>
+            {{ $currentPage := . }}
+            <li class="mb-3">
+              <h6>Stats</h6>
+              <button class="snipcart-add-item"
                   data-item-id="{{.id}}"
                   data-item-name="{{.name}}"
                   data-item-price="{{.price}}"
@@ -156,36 +103,31 @@
                     >
                     <a >Buy Now</a>
                 </button>
-                </li>
-                {{with .details}}
-                <li><p>Ram</p> <p>{{.ram}}</p></li>
-                <li><p>Storag</p> <p>{{.storage}}</p></li>
-                <li><p>Server Quota</p> <p>{{.server}}</p></li>
-                <li><p>Bungee Quota</p> <p>{{.bungee}}</p></li>
-                {{end}}
-              </ul>
-            </div>
-          </div>
+            </li>
+            {{with .details}}
+            <li>
+              <p>Ram</p>
+              <p>{{.ram}}</p>
+            </li>
+            <li>
+              <p>Storag</p>
+              <p>{{.storage}}</p>
+            </li>
+            <li>
+              <p>Server Quota</p>
+              <p>{{.server}}</p>
+            </li>
+            <li>
+              <p>Bungee Quota</p>
+              <p>{{.bungee}}</p>
+            </li>
+            {{end}}
+          </ul>
         </div>
-        {{end}}
-
       </div>
-  </section>
-  <!---->
-  
-  {{ if ne .Params.amp.enable false }}
-  {{ partial "amp/google-analytics" . }}
-  {{ if ( ne .Params.disableSnipcart true ) }}
-    <script async src="https://cdn.snipcart.com/themes/v3.2.1/default/snipcart.js"></script>
-  {{ end }}
-  <div hidden id="snipcart" data-api-key="{{ site.Params.snipcartApiKey }}" data-config-modal-style="side"></div>
-  {{ if ( ne .Site.Params.disableExitModal true ) }}
-    {{ partial "section/exit-modal.html" . }}
-  {{ end }}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
-  </html>
-  {{ else }}
-  {{ partial "structure/foot.no-amp" . }}
-  {{ end }}
-  
+    </div>
+    {{end}}
+  </div>
+</section>
+<!---->
+{{ partial "structure/foot" . }}
