--- a/themes/mc-server-theme-amp/layouts/_default/price.html
+++ b/themes/mc-server-theme-amp/layouts/_default/price.html
@@ -16,7 +16,7 @@
       {{if .featured}}
       <div class="banner">
         <div class="text">
-          <p>Recommended</p>
+          <amp-p >Recommended</amp-p>
         </div>
       </div>
       {{end}}
@@ -58,7 +58,7 @@
             {{range .featuredItems}}
             <div class="col-md-4">
               <div class="feature">
-                <h3>{{.name}}</h3>
+                <h3 style="color: #121212;">{{.name}}</h3>
                 <img src="{{.icon}}" alt="" />
               </div>
             </div>
