remove static description

--- a/themes/mc-server-theme-amp/layouts/_default/price.html
+++ b/themes/mc-server-theme-amp/layouts/_default/price.html
@@ -117,7 +117,7 @@
                   data-item-name="{{.name}}"
                   data-item-price="{{.price}}"
                   data-item-url="/"
-                  data-item-description="Painting lessons - 1h"
+                  data-item-description="{{.description}}"
                   data-item-selected-plan="monthly-plan"
 
                   {{ $plans := .customFields }}
