--- a/themes/mc-server-theme-amp/layouts/_default/price.html
+++ b/themes/mc-server-theme-amp/layouts/_default/price.html
@@ -116,7 +116,7 @@
                   data-item-id="{{.id}}"
                   data-item-name="{{.name}}"
                   data-item-price="{{.price}}"
-                  data-item-url="https://mcserverhosting.net/cobblemon"
+                  data-item-url="https://mcserverhosting.net/cobblemon/"
                   data-item-description="{{.description}}"
                   data-item-selected-plan="monthly-plan"
 
