--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-economy.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-premade-table-economy.html
@@ -29,10 +29,15 @@
                   data-item-id="{{ .Params.product.id }}"
                   data-item-price="{{ .Params.product.price }}"
                   data-item-url="{{ $currentPage.Permalink }}"
+                  
                   {{ range $i, $e := .Params.product.customFields }}
                     data-item-custom{{ add $i 1 }}-name="{{ $e.name }}"
-                    data-item-custom{{ add $i 1 }}-type="{{ $e.type }}"
-                    data-item-custom{{ add $i 1 }}-value="{{ $e.value }}"
+                    {{ if eq $e.name "servertype" }}
+                      data-item-custom{{ add $i 1 }}-options="{{ $e.options }}"
+                    {{ else }}
+                      data-item-custom{{ add $i 1 }}-type="{{ $e.type }}"
+                      data-item-custom{{ add $i 1 }}-value="{{ $e.value }}"
+                    {{ end }}
                   {{ end }}
 
                   data-item-selected-plan="{{ .Params.product.selectedPlan }}"
