--- a/themes/mc-server-theme-amp/layouts/plans-custom/list.html
+++ b/themes/mc-server-theme-amp/layouts/plans-custom/list.html
@@ -1,5 +1,7 @@
 {{ partial "structure/head" . }}
 
+<meta http-equiv="Refresh" content="3;url='https://alpha.panel.mcsh.red'" />
+
 {{ partial "navigation/navbar.html" . }}
 
 <main>
