--- a/themes/mc-server-theme-amp/layouts/partials/section/plans-custom-cta.html
+++ b/themes/mc-server-theme-amp/layouts/partials/section/plans-custom-cta.html
@@ -3,12 +3,12 @@
 >
   <div class="overlay display-flex align-items-center">
     <div class="container display-flex flex-direction-column align-items-center justify-content-center">
-      <h1 class="font-size-40 font-weight-bold padding-y-32 text-align-center">Need power and flexibility that meets your needs?</h1>
-      <p class="color-whisper text-align-center">Let us help you make a tailor made solution to your hosting needs!</p>
+      <h1 class="font-size-40 font-weight-bold padding-y-32 text-align-center">Redirecting in 3...</h1>
+      <p class="color-whisper text-align-center">2...</p>
         <a class="font-size-16 font-weight-semi-bold background-color-dodger-blue color-white margin-y-32 padding-x-32 padding-y-24 border-radius-8"
-           href="/plans-purchase"
+           href="https://alpha.panel.mcsh.red"
         >
-          Make a Custom Plan
+          Or just click here really fast :)
         </a>
     </div>
   </div>
